# mupattern

./: .gitignore  AGENTS.md  README.md  firebase.json  index.html  muexpression_gui.spec  mufile_gui.spec  package.json  pyproject.toml
examples/: spot_pos9_bbox.csv  spot_pos9_config.yaml  spot_pos9_spots.csv
muapplication/: pyproject.toml
muapplication/src/muapplication/api/: app.py  deps.py  models.py  routes_jobs.py  routes_tasks.py
muapplication/src/muapplication/apps/expression/: core.py  route.py
muapplication/src/muapplication/apps/file/: core.py  route.py
muapplication/src/muapplication/apps/kill/: core.py  route.py
muapplication/src/muapplication/apps/spot/: route.py
muapplication/src/muapplication/apps/tissue/: core.py  route.py
muapplication/src/muapplication/cli/: expression.py  file.py  kill.py  main.py  serve.py  spot.py  tissue.py
muapplication/src/muapplication/common/: jobs.py  progress.py  tasks.py  types.py
muapplication/src/muapplication/gui/: __init__.py  expression.py  file.py  kill.py  spot.py
mucrop/: main.py  pyproject.toml
muexpression/: main.py
muexpression/src/muexpression/: core.py  gui.py
mufile/: main.py  pyproject.toml
mufile/src/mufile/: gui.py
mufile/tests/: test_parse_slice_string.py
mukill/: main.py  pyproject.toml
mupattern/: package.json  tsconfig.json
mupattern-desktop/: package.json
mupattern-desktop/electron/: main.cts  preload.cts
mupattern-desktop/src/: mupattern-desktop-env.d.ts
mupattern-desktop/src/application/: ApplicationApp.tsx
mupattern-desktop/src/application/expression/: ExpressionLeftSidebar.tsx  ExpressionTab.tsx
mupattern-desktop/src/application/kill/: KillTab.tsx
mupattern-desktop/src/lib/: tags-yaml.ts
mupattern-desktop/src/register/: RegisterApp.tsx
mupattern-desktop/src/see/: SeeApp.tsx
mupattern-desktop/src/see/components/: Viewer.tsx  (+1 more)
mupattern-desktop/src/tasks/: TasksDashboardPage.tsx
mupattern-desktop/src/workspace/: WorkspaceDashboard.tsx  store.ts
mupattern-desktop/test/: zarr.test.ts
mupattern-py/: pyproject.toml
mupattern-rs/: Cargo.toml
mupattern-rs/src/: crop.rs  expression.rs  main.rs  movie.rs  zarr.rs
mupattern-web/: package.json
mupattern-web/src/: App.tsx
mupattern/src/: App.tsx  Landing.tsx  store.ts  types.ts
mupattern/src/components/: ConfigLoader.tsx  Header.tsx  ImageLoader.tsx  Landing.tsx  PatternEditor.tsx  Sidebar.tsx  ThemeProvider.tsx  UnifiedCanvas.tsx
mupattern/src/hooks/: useCalibration.ts  usePattern.ts
mupattern/src/lib/: clear-session.ts  load-image.ts  units.ts
mupattern/src/register/: RegisterApp.tsx  store.ts
mupattern/src/see/: SeeApp.tsx
mupattern/src/store/: mupattern-store.ts
mupattern/src/workspace/: WorkspaceDashboard.tsx  WorkspaceLanding.tsx
muregister/src/: App.tsx  store.ts  types.ts
muregister/src/components/: ExportButton.tsx  Header.tsx  Sidebar.tsx  UnifiedCanvas.tsx
muregister/src/lib/: autodetect.ts  persist.ts
musee/: package.json
musee/src/: App.tsx  store.ts
musee/src/components/: Viewer.tsx
musee/src/hooks/: useZarrStore.ts
musee/src/lib/: persist.ts  spots.ts  zarr.ts
muspot/: main.py  pyproject.toml
mustudio/: index.html  package.json
mustudio/electron/: kill-inference.ts  main.cjs  main.cts  preload.cjs  preload.cts
mustudio/src/: App.tsx  main.tsx  mustudio-env.d.ts
mustudio/src/application/: ApplicationApp.tsx
mustudio/src/backend/: api.ts
mustudio/src/register/: RegisterApp.tsx  store.ts
mustudio/src/see/: store.ts
mustudio/src/tasks/: TasksDashboardPage.tsx
mustudio/src/workspace/: WorkspaceDashboard.tsx  WorkspaceLanding.tsx  store.ts
mustudio/test/: zarr.test.ts
mutrain/: dataset_cmd.py  main.py  predict_cmd.py  pyproject.toml  train_cmd.py
onnx_models/: README.md
pyinstaller/: muexpression_gui.spec  mufile_gui.spec
scripts/: muexpression_gui_entry.py  mufile_gui_entry.py
shared/: package.json
src/: App.tsx  types.ts
src/components/: CalibrationControls.tsx  ExportButton.tsx  FileLoader.tsx  Header.tsx  PatternCanvas.tsx  PatternControls.tsx  RegistrationCanvas.tsx  Tabs.tsx  TransformControls.tsx  TransformEditor.tsx  UnifiedCanvas.tsx
src/hooks/: usePattern.ts  useTransform.ts
(+59 files in other folders)
