[project]
name = "mupattern"
version = "0.1.0"
description = "Micropattern analysis tools"
requires-python = ">=3.12"
dependencies = [
    "muapplication",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.workspace]
members = ["muapplication"]

[tool.uv.sources]
muapplication = { workspace = true }
