[project]
name = "muapplication"
version = "0.1.0"
description = "Unified micropattern backend: file, kill, expression, and spot analysis"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
    "numpy>=1.26",
    "tifffile>=2024.1",
    "zarr>=2.16,<3",
    "nd2>=0.10",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "datasets>=3.0",
    "Pillow>=10.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.40",
    "accelerate>=1.1.0",
    "evaluate>=0.4",
    "scikit-learn>=1.4",
    "spotiflow>=0.5",
    "customtkinter>=5.0",
    "cellpose>=4.0",
    "optimum[onnxruntime]>=1.20",
    "cellSAM @ git+https://github.com/vanvalenlab/cellSAM.git",
    "scikit-image>=0.22",
]

[project.scripts]
muapplication = "muapplication.cli:app"
muapplication-file-gui = "muapplication.gui.file:main"
muapplication-kill-gui = "muapplication.gui.kill:main"
muapplication-expression-gui = "muapplication.gui.expression:main"
muapplication-spot-gui = "muapplication.gui.spot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }
torchvision = { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }

[tool.hatch.build.targets.wheel]
packages = ["src/muapplication"]
