[project]
name = "mucrop"
version = "0.1.0"
description = "Crop micropattern positions from tiled microscopy data into zarr stacks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "numpy>=1.26",
    "tifffile>=2024.1",
    "zarr>=2.16,<3",
]

[project.scripts]
mucrop = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["."]
