[project]
name = "mukill"
version = "0.1.0"
description = "Analyze and clean kill curve predictions from micropattern experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.scripts]
mukill = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["."]
